<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="@android:style/Holo.Light.ButtonBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/email_login_form">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/email_sign_in_button"
            android:textColor="@color/purple_700"
            android:text="@string/login_text"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/or_text"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/create_acc_login_button"
            android:textColor="@color/purple_700"
            android:text="@string/create_text"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/or_text"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/googleSignInButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/common_google_signin_btn_icon_light" />

            <ImageButton
                android:id="@+id/facebookSignInButton"
                android:layout_margin="10dp"
                android:src="@drawable/facebook_logo"
                android:scaleType="centerCrop"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

            <ImageButton
                android:id="@+id/githubSignInButton"
                android:layout_margin="10dp"
                android:src="@drawable/github_logo"
                android:scaleType="centerCrop"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>